fixed line spacing of li elements

--- a/themes/kmom04/css/style-dark.css
+++ b/themes/kmom04/css/style-dark.css
@@ -325,7 +325,7 @@ body {
   padding: 0 1em;
 }
 
-p {
+p, li {
   line-height: 1.5em;
 }
 
