--- a/themes/kmom04/scss/general.scss
+++ b/themes/kmom04/scss/general.scss
@@ -16,6 +16,6 @@ body {
     padding: 0 1em;
 }
 
-p {
+p,li {
     line-height: 1.5em;
 }
